@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "October 2008" "smp_utils\-0.94" SMP_UTILS
+.TH SMP_UTILS "8" "December 2008" "smp_utils\-0.94" SMP_UTILS
 .SH NAME
 smp_* \- invoke a Serial Attached SCSI Management (SMP) function
 .SH SYNOPSIS
@@ -188,7 +188,7 @@ indicating that port is not connected.
 To date SAS has three generations. The first two generations are approved
 standards: the original SAS (SAS ANSI INCITS 376-2003) and SAS 1.1 (INCITS
 417-2006). SAS-2 technical work is ongoing and at the time of writing the
-most recent draft is sas2r13.pdf (see section 10.4.3 for SMP functions).
+most recent draft is sas2r15.pdf (see section 10.4.3 for SMP functions).
 To avoid confusion, the three generations of SAS will be referred to in
 these man pages as SAS 1, 1.1 and 2 . Drafts, including those just prior to
 standardization can be found at the http://www.t10.org site.
